--- a/Lakers Stranica/Lakers.css
+++ b/Lakers Stranica/Lakers.css
@@ -76,3 +76,84 @@ align-items: center;
     font-weight: bold;
   }
 }
+
+.gallery-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 30px;
+}
+
+.gallery-item {
+  flex: 1 1 250px;
+  max-width: 300px;
+  border: 4px solid #6a3bd8;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  transition: transform 0.3s ease;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.gallery-item p {
+  text-align: center;
+  margin: 10px 0;
+  font-weight: bold;
+  color: #552583;
+}
+
+
+.gallery-item:hover {
+  transform: scale(1.03);
+}
+
+
+
+
+
+.gallery-containera {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 30px;
+}
+
+.gallery-itema {
+  flex: 1 1 250px;
+  max-width: 1600px;
+  border: 4px solid #b59053;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  transition: transform 0.3s ease;
+}
+
+.gallery-itema img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.tekst {
+  text-align: center;
+  color: #260a6e;
+}
+
+.teksta {
+  text-align: center;
+  color: #edc486;
+}
+
+.blaka {
+  text-align: center;
+}
+
